letter spacing fix

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ section {
 h1 {
    text-align: left;
    display: inline;
+   letter-spacing: 0.1em;
 
 
 }
@@ -48,11 +49,12 @@ p {
   clear: both;
   margin:0;
 
+
 }
 
 section p {
   letter-spacing: 0.15em;
-  	font-size: 1em;
+  	font-size: .8em;
   	text-align: left;
   	margin: 0 20px;
   	height: 50px;
